[gd_scene load_steps=11 format=3 uid="uid://dhbh3f5llx1c8"]

[ext_resource type="Script" path="res://Scenes/UI/Misc/offline_income.gd" id="1_7d0ay"]
[ext_resource type="Texture2D" uid="uid://v5nyxote7yh7" path="res://icon.svg" id="2_5d2yf"]
[ext_resource type="Texture2D" uid="uid://kq7i0813cuuu" path="res://Assets/image-removebg-preview (10).png" id="3_j4ok6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1yfwk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5a1gl"]
bg_color = Color(0.868985, 0.868985, 0.868985, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_asc7o"]
bg_color = Color(0.462745, 0.819608, 0.678431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wicm"]
bg_color = Color(0.301961, 0.658824, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byun2"]
bg_color = Color(0.376471, 0.768627, 0.611765, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlm7g"]
bg_color = Color(0.707967, 0.707967, 0.707966, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jm5u3"]
bg_color = Color(0.438882, 0.548334, 0.867201, 1)

[node name="OfflineIncome" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7d0ay")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1yfwk")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 57.0
offset_top = -234.0
offset_right = -57.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5a1gl")

[node name="Label" type="RichTextLabel" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -207.0
offset_right = 300.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/table_v_separation = 0
theme_override_constants/table_h_separation = 0
theme_override_constants/line_separation = 0
theme_override_font_sizes/bold_font_size = 56
bbcode_enabled = true
text = "[center][b][color=#000000]Offline Money[/color][/b][/center]"
fit_content = true

[node name="MoneyLabel" type="RichTextLabel" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = 2.0
offset_right = 303.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/table_v_separation = 0
theme_override_constants/table_h_separation = 0
theme_override_constants/line_separation = 0
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 56
bbcode_enabled = true
text = "[center][color=#000000]6969[/color][/center]"
fit_content = true

[node name="ClaimButton" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -81.0
offset_right = 314.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
theme_override_styles/hover = SubResource("StyleBoxFlat_asc7o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7wicm")
theme_override_styles/normal = SubResource("StyleBoxFlat_byun2")

[node name="CostLabel" type="RichTextLabel" parent="Panel/Panel/ClaimButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 465.0
offset_bottom = 89.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 42
bbcode_enabled = true
text = "[center][b][color=#000000]Claim[/color][/b][/center]"

[node name="ProgressBar" type="ProgressBar" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -152.0
offset_right = 289.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_vlm7g")
theme_override_styles/fill = SubResource("StyleBoxFlat_jm5u3")
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Panel/ProgressBar"]
layout_mode = 0
offset_left = -2.0
offset_top = 9.0
offset_right = 577.0
offset_bottom = 51.0
bbcode_enabled = true
text = "[center][b][color=#000000]Claim[/color][/b][/center]"

[node name="TextureRect" type="TextureRect" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -108.0
offset_right = 43.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5d2yf")
expand_mode = 1

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1yfwk")

[node name="Panel" type="Panel" parent="Panel2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 57.0
offset_top = -234.0
offset_right = -57.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5a1gl")

[node name="Label" type="RichTextLabel" parent="Panel2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -207.0
offset_right = 300.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/table_v_separation = 0
theme_override_constants/table_h_separation = 0
theme_override_constants/line_separation = 0
theme_override_font_sizes/bold_font_size = 41
bbcode_enabled = true
text = "[center][b][color=#000000]No Internet Connection[/color][/b][/center]"
fit_content = true

[node name="MoneyLabel" type="RichTextLabel" parent="Panel2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.5
offset_top = -139.5
offset_right = 205.5
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/table_v_separation = 0
theme_override_constants/table_h_separation = 0
theme_override_constants/line_separation = 0
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 56
bbcode_enabled = true
text = "[center][color=red]Make sure you have an active internet connection and try again.[/color][/center]"
fit_content = true

[node name="TryAgainButton" type="Button" parent="Panel2/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -81.0
offset_right = 309.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
theme_override_styles/hover = SubResource("StyleBoxFlat_asc7o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7wicm")
theme_override_styles/normal = SubResource("StyleBoxFlat_byun2")

[node name="CostLabel" type="RichTextLabel" parent="Panel2/Panel/TryAgainButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 465.0
offset_bottom = 89.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 42
bbcode_enabled = true
text = "[center][b][color=#000000]Try Again[/color][/b][/center]"

[node name="TextureRect" type="TextureRect" parent="Panel2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 19.0
offset_right = 50.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_j4ok6")
expand_mode = 1

[connection signal="pressed" from="Panel/Panel/ClaimButton" to="." method="_on_claim_button_pressed"]
[connection signal="pressed" from="Panel2/Panel/TryAgainButton" to="." method="_on_try_again_button_pressed"]
